[workspace]
resolver = "2"
members = [
    "xrpl-consensus",
    "xrpl-consensus-validations",
    "xrpl-consensus-core"
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/nkramer44/xrpl-consensus-rs"
rust-version = "1.64"

[workspace.dependencies]
xrpl-consensus-core = {path = "xrpl-consensus-core"}
