[package]
name = "xrpl-consensus-validations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xrpl-consensus-core = { workspace = true }
generational-arena = "0.2.9"
once_cell = { workspace = true }
derivative = "2.2.0"
bimap = "0.6.3"

[dev-dependencies]
rand = "0.8.5"